--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>imagio</title>
+    <style>
+    h1   {color: white;}
+    h2  {color: white;}
+    label {color: white;}
+</style>
+    
 </head>
 <body>
-    <hi> welcome </hi>
+<style>
+body{
+    background-image:url('background.jpg');
+}
+</style>
+    <center>
+    <h1> welcome </h1>
+    <h2> give the url of image as input</h2>
+    <form action="">
+    <label for="homepage">Paste the url:</label>
+    <input type="url" id="homepage" name="homepage"><br><br>
+    
+    <h2> give the url of background image as input</h2>
+    <form action="">
+    <label for="homepage_background ">Paste the url:</label>
+    <input type="url" id="homepage_background" name="homepage_background"><br><br>
+    <input type="submit">
+</form>
+    </center>
 </body>
 </html>
